<resources>
    <string name="app_name">SMART ATTENDANCE</string>
    <string name="action_settings">Settings</string>
    <string name="semester">Semester</string>
    <string name="c_name">Course Name</string>
    <string name="c_code">Course Code</string>
    <string name="c_credit">Course Credit</string>
    <string name="save">SAVE</string>
    <string name="c_text">Add Course Information Here</string>
    <string name="start_attendance">Start Attendance</string>
    <string name="stop_attendance">Stop Attendance</string>
</resources>
